--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,10 @@ jobs:
 
       - run: brew test-bot --only-setup
 
+      - run: |
+          pwd
+          ls -al
+
       - run: brew test-bot --only-tap-syntax
 
       - run: brew test-bot --only-formulae
