--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,11 +30,8 @@ jobs:
 
       - run: brew test-bot --only-setup
 
-      - run: |
-          pwd
-          ls -al
-
-      - run: brew test-bot --only-tap-syntax
+        # disable style tests
+        #- run: brew test-bot --only-tap-syntax
 
       - run: brew test-bot --only-formulae
         if: github.event_name == 'pull_request'
